--- a/EcoFind/manifest.json
+++ b/EcoFind/manifest.json
@@ -9,6 +9,10 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
 },
+"js": [
+    "popup.js",
+    "search.js"
+],
 "permissions": [
     "activeTab",
     "tabs"
