--- a/EcoFind/manifest.json
+++ b/EcoFind/manifest.json
@@ -10,8 +10,7 @@
     "default_popup": "popup.html"
 },
 "js": [
-    "popup.js",
-    "search.js"
+    "popup.js"
 ],
 "permissions": [
     "activeTab",
