--- a/EcoFind/manifest.json
+++ b/EcoFind/manifest.json
@@ -1,19 +1,23 @@
 {
-"manifest_version": 2,
+    "manifest_version": 2,
 
-"name": "EcoFind Sustainable Shopping",
-"description": "This extension will make sustainable shopping easier",
-"version": "1.0",
+    "name": "EcoFind Sustainable Shopping",
+    "description": "This extension will make sustainable shopping easier",
+    "version": "1.0",
 
-"browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-},
-"js": [
-    "popup.js"
-],
-"permissions": [
-    "activeTab",
-    "tabs"
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    },
+
+    "js": [
+        "popup.js"
+    ],
+    "permissions": [
+        "activeTab",
+        "tabs"
+    ],
+    "web_accessible_resources": [
+        "*"
     ]
 }
