--- a/EcoFind/manifest.json
+++ b/EcoFind/manifest.json
@@ -4,6 +4,8 @@
 "name": "EcoFind Sustainable Shopping",
 "description": "This extension will make sustainable shopping easier",
 "version": "1.0",
+"content_security_policy": ["script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js; object-src 'self'",
+   "script src 'self' https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js; object-serc 'self'"],
 
 "browser_action": {
     "default_icon": "icon.png",
@@ -14,6 +16,9 @@
 ],
 "permissions": [
     "activeTab",
-    "tabs"
+    "tabs",
+    "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js",
+    "https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js",
+    "<all_urls>"
     ]
 }
