--- a/EcoFind/manifest.json
+++ b/EcoFind/manifest.json
@@ -3,22 +3,17 @@
     "name": "EcoFind Sustainable Shopping",
     "description": "This extension will make sustainable shopping easier",
     "version": "1.0",
-    "content_security_policy": ["script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js; object-src 'self'",
-    "script src 'self' https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js; object-serc 'self'"],
-
+    "content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js; object-src 'self'",
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
-    "js": [
-        "popup.js"
-    ],
     "permissions": [
         "activeTab",
         "tabs",
-        "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js",
-        "https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js",
-        "<all_urls>"
+        "https://*/",
+        "http://*/",
+        "directory.goodonyou.eco/*"
         ],
 
     "web_accessible_resources": [
